[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tubermate"
version = "1.0.0"
description = "Interactive terminal YouTube downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "yt-dlp>=2026.1.0"
]

[project.scripts]
Tubermate = "tubermate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
